@@ -7,6 +7,9 @@ ikiwiki (2.65) UNRELEASED; urgency=low
     elements.
   * progress: Display an error if the progress cannot be parsed, and allow
     the percent parameter to only optionally end with "%".
+  * Fix reversion in use of ikiwiki -verbose -setup with a setup file that
+    enables syslog. Setup output is once again output to stdout in this
+    case.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 17 Sep 2008 14:26:56 -0400
 
